# libwav

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  format.sh
include/: Constants.hpp  Data.hpp  FileDescriptor.hpp  Format.hpp  Header.hpp  IO.hpp  Infer.hpp  Read.hpp  Variadic.hpp  Wav.hpp  Write.hpp  wav.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
tests/files/: make.sh
